fixed the scrollbar thing making the ui simple

--- a/web/assets/styles/post.css
+++ b/web/assets/styles/post.css
@@ -6,7 +6,7 @@
 }
 .loaded_post{
     width: 98%;
-    overflow-y: scroll;
+    overflow-y: overlay;
     overflow-x: hidden;
 }
 .home{
